<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="toner"
            type="com.app.printers.model.Toner" />
        <variable
            name="adapter"
            type="com.app.printers.adapters.LocationsDetailedListAdapter" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btnBack"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_done"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnDone"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnDone"
            android:id="@+id/tonerNameInput"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:hint="@string/toner_name"
            android:textColorHint="@color/purple_700"
            app:boxBackgroundColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={toner.name}"
                android:textSize="18sp"
                android:paddingBottom="4dp"
                android:id="@+id/tonerNameEdit"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/in_stock"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/inStockCount"
            app:layout_constraintTop_toBottomOf="@id/tonerNameInput"
            android:textSize="20sp"
            android:textColor="@color/purple_700"
            android:id="@+id/inStockTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tonerNameInput"
            android:textSize="20sp"
            android:text="@{String.valueOf(toner.count)}"
            android:textColor="@color/purple_700"
            android:id="@+id/inStockCount"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            app:layout_constraintTop_toBottomOf="@id/inStockTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="12dp"
            android:id="@+id/btnAddLocation"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/btnAddLocation"
            app:layout_constraintBottom_toTopOf="@id/btnDelete"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            setAdapter="@{adapter}"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            app:cornerRadius="12dp"
            android:id="@+id/btnDelete"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>